hasta sprint4-- falta cosas

--- a/src/app/componentes/historia-clinica/historia-clinica.component.html
+++ b/src/app/componentes/historia-clinica/historia-clinica.component.html
@@ -34,6 +34,9 @@
                 <br>
                 <input class ="clave" type="text" name="clave2" placeholder="Cantidad de pastillas al dia..." formControlName="clave2">
                 <input class ="valor" type="number" name="valor2" placeholder="2..." formControlName="valor2">
+                <br>
+                <input class ="clave" type="text" name="clave3" placeholder="extra..." formControlName="clave3">
+                <input class ="valor" type="number" name="valor3" placeholder="3..." formControlName="valor3">
     
                 <button type="submit" [disabled]="formGroup.invalid">Subir historia</button>
     
