--- a/src/app/componentes/turnos/misturnos/misturnos.component.html
+++ b/src/app/componentes/turnos/misturnos/misturnos.component.html
@@ -94,11 +94,12 @@
             </div>
         </div>
 
-        <div class="list-group">
+        <!-- <h1>HOLA</h1> -->
+        <!-- <div class="list-group">
             <div *ngIf="usuarioLogueado.especialista">
                 <app-mostrar-historia-medico [historia]="historias"></app-mostrar-historia-medico>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <!-- VISTA ADMINISTRADOR -->
