--- a/src/app/componentes/mostrar-historia-medico/mostrar-historia-medico.component.html
+++ b/src/app/componentes/mostrar-historia-medico/mostrar-historia-medico.component.html
@@ -1,17 +1,33 @@
+<div class="busqueda" role="main">
+  <div class="card">
+    <div class="form-group">
+      <label for="search-text">Filtro</label>
+      <input type="email" class="form-control" id="search-text" aria-describedby="search-text" 
+        [(ngModel)]="textoABuscar" placeholder="Ingrese una palabra clave..." 
+        autofocus>
+    </div>              
+  </div>
+</div>
 <div class="row row-cols-1 row-cols-md-3 mb-3 text-center cardHistoria">
-    <div class="col" *ngFor="let hist of historia | slice:0:3">
-      <div class="card mb-4 rounded-3 shadow-sm" >
+    <div class="col" *ngFor="let hist of historia | appFilter: textoABuscar; let i = index">
+      <div class="card mb-4 rounded-3 shadow-sm">
         <div class="card-header py-3">
-          <h4 class="my-0 fw-normal">Paciente: {{hist.turno.paciente.nombre}}</h4>
+          <h4 class="my-0 fw-normal"><b>Paciente</b>: {{hist.paciente.apellido}}, {{hist.paciente.nombre}}</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title"><p>
-            <strong>
-              Atencion {{hist.turno.fecha}}
-            </strong>
-            {{hist.turno.especialidad}}
+          <p class="card-title pricing-card-title">
+            <strong>Edad: </strong> {{hist.paciente.edad}}
           </p>
-          <small class="text-muted fw-light"></small></h1>
+          <p class="card-title pricing-card-title">
+            <strong>Email: </strong> {{hist.paciente.email}}
+          </p>
+          <p class="card-title pricing-card-title">
+            <strong>Atencion: </strong> {{hist.fecha}}
+          </p>
+          <p class="card-title pricing-card-title">
+            <strong>Hora: </strong> {{hist.hora}}
+          </p>
+
           <button class="btn btn-primary" (click)="verHistoria(hist)">Ver historia clinica</button>
           
         </div>
