--- a/src/app/ingreso/registro/registro.component.css
+++ b/src/app/ingreso/registro/registro.component.css
@@ -374,3 +374,38 @@ label {
   align-items: center;
   /* padding: 2% 0% 3% 10%;  */
 }
+
+
+
+
+
+
+
+
+
+
+
+.captcha-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.images {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+  border: 2px solid transparent;
+  cursor: pointer;
+}
+
+img.selected {
+  border: 2px solid green;
+}
+
