--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,8 @@
   [fullScreen]="true">
 </ngx-spinner>
 
+<!-- <div [@slideInOutAnimation]="prepareRoute(outlet)"> -->
+
 <div class="img-clinicarmm">
     <app-navbar></app-navbar>
     <router-outlet #outlet="outlet"></router-outlet>
